uspace/lib/pcut/tests/asserts.expected
1..3
#> Starting suite Default.
not ok 1 int_equals failed
# error: asserts.c:36: Expected <1> but got <0> (1 != 0)
not ok 2 double_equals failed
# error: asserts.c:41: Expected <1.000000+-0.400000> but got <0.500000> (1. != 0.5)
not ok 3 str_equals failed
# error: asserts.c:46: Expected <abc> but got <xyz> ("abc" != "xyz")
#> Finished suite Default (failed 3 of 3).
